--- a/kds/.project
+++ b/kds/.project
@@ -106,6 +106,11 @@
 			<locationURI>PARENT-1-PROJECT_LOC/main.c</locationURI>
 		</link>
 		<link>
+			<name>source/queue.c</name>
+			<type>1</type>
+			<location>/opt/Freescale/KSDK_1.2.0/examples/frdmk64f/demo_apps/lwip/heynet/heynet/queue.c</location>
+		</link>
+		<link>
 			<name>startup/startup.c</name>
 			<type>1</type>
 			<locationURI>PARENT-7-PROJECT_LOC/platform/devices/startup.c</locationURI>
